Refactor UCP website to load text from json

--- a/aic/field-values.html
+++ b/aic/field-values.html
@@ -21,42 +21,40 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="../index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link string" href="../index.html"><span class="string">ucp-home</span><span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../getting-started.html">Getting Started</a>
+                        <a class="nav-link string" href="../getting-started.html">ucp-getting-started</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../features.html">Features</a>
+                        <a class="nav-link string" href="../features.html">ucp-features</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        AI Character Introduction
-                      </a>
+                        <a class="nav-link dropdown-toggle string" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ucp-ai-intro</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="overview.html">Overview</a>
+                            <a class="dropdown-item string" href="overview.html">ucp-aic-overview</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="detailed.html">AI Personality Values</a>
-                            <a class="dropdown-item" href="#">AIC Field Values</a>
+                            <a class="dropdown-item string" href="detailed.html">ucp-aic-personality</a>
+                            <a class="dropdown-item string" href="#">ucp-aic-fields</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../aiv.html">AI Castle Introduction</a>
+                        <a class="nav-link string" href="../aiv.html">ucp-aiv-intro</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../contributing.html">Contributing</a>
+                        <a class="nav-link string" href="../contributing.html">ucp-contributing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="../faq.html">FAQ</a>
+                        <a class="nav-link string" href="../faq.html">ucp-faq</a>
                     </li>
                 </ul>
             </div>
         </nav>
         <div class="header">
-            <h4 class="text-center">Unofficial Crusader Patch Latest Version: UCP 2.14 
+            <h4 class="text-center"><span class="string">ucp-latest-version</span>
                     <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch"><i class="fab fa-github"></i></a>
-                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.14">changelog</a> 
-                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.14/UnofficialCrusaderPatch_v2.14.zip">download</a>
+                    <a class="latest-release string" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.14">ucp-changelog</a> 
+                    <a class="latest-release string" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.14/UnofficialCrusaderPatch_v2.14.zip">ucp-download</a>
                 </h4>
         </div>
         <hr class="header-divider">
@@ -291,5 +289,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="../assets/js/aic.js"></script>
+<script src="../assets/js/strings.js"></script>
 
 </html>
