--- a/contributing.html
+++ b/contributing.html
@@ -21,82 +21,73 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link string" href="index.html">ucp-home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="getting-started.html">Getting Started</a>
+                        <a class="nav-link string" href="getting-started.html">ucp-getting-started</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="features.html">Features</a>
+                        <a class="nav-link string" href="features.html">ucp-features</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        AI Character Introduction
-                      </a>
+                        <a class="nav-link dropdown-toggle string" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ucp-ai-intro</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="aic/overview.html">Overview</a>
+                            <a class="dropdown-item string" href="aic/overview.html">ucp-aic-overview</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="aic/detailed.html">AI Personality Values</a>
-                            <a class="dropdown-item" href="aic/field-values.html">AIC Field Values</a>
+                            <a class="dropdown-item string" href="aic/detailed.html">ucp-aic-personality</a>
+                            <a class="dropdown-item string" href="aic/field-values.html">ucp-aic-fields</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="aiv.html">AI Castle Introduction</a>
+                        <a class="nav-link string" href="aiv.html">ucp-aiv-intro</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contributing <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#"><span class="string">ucp-contributing</span><span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="faq.html">FAQ</a>
+                        <a class="nav-link string" href="faq.html">ucp-faq</a>
                     </li>
                 </ul>
             </div>
         </nav>
         <div class="header">
-          <h4 class="text-center">Unofficial Crusader Patch Latest Version: UCP 2.14 
-                  <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch"><i class="fab fa-github"></i></a>
-                  <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.14">changelog</a> 
-                  <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.14/UnofficialCrusaderPatch_v2.14.zip">download</a>
-              </h4>
-      </div>
+            <h4 class="text-center"><span class="string">ucp-latest-version</span>
+                    <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch"><i class="fab fa-github"></i></a>
+                    <a class="latest-release string" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.14">ucp-changelog</a> 
+                    <a class="latest-release string" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.14/UnofficialCrusaderPatch_v2.14.zip">ucp-download</a>
+                </h4>
+        </div>
         <hr class="header-divider">
         <div id="contributing-header">
-            <h4 class="text-center">Learning the Code: A Contributor's Tutorial</h4>
+            <h4 class="text-center string">ucp-contributing-title</h4>
             <br>
-            <h5 class="text-center">An adaptation of <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/wiki/Contributor-Tutorial:-Learn-the-code">this tutorial</a> made by @LordHansCapon</h5>
+            <h5 class="text-center string">ucp-contributing-credit</h5>
         </div>
 
         <div id="contributing-content" class="">
 
-            <h5 class="text-center"><i>Note: This tutorial assumes you are familiar with how to setup an environment, GIT, and other fundamentals</i></h5>
+            <h5 class="text-center string">ucp-contributing-prereq-note</h5>
             <br>
             <br>
 
             <div class="card contributing-step">
-                <h5>Prerequisites</h5>
+                <h5 class="string">ucp-contributing-prereq-title</h5>
                 <hr class="contributing-step-divider">
-                <div class="card-body contributing-step-body">
-                    Environment setup is the first step. Below are three suggested development environments but feel free to use whatever suits your preferences.
-                    <ul>
-                        <li>JetBrains Rider</li>
-                        <li>Visual Studio Code</li>
-                        <li>Visual Studio</li>
-                    </ul>
-                </div>
+                <div class="card-body contributing-step-body string">ucp-contributing-prereq-body</div>
             </div>
 
             <div class="card contributing-step">
-                <h5>First Steps</h5>
+                <h5 class="string">ucp-contributing-first-steps-title</h5>
                 <hr class="contributing-step-divider">
                 <div class="card-body contributing-step-body">
                     <ul>
-                        <li>Download the repository by cloning, directly downloading or forking it.</li>
-                        <li>Open the project, there are 4 projects in the solution, select the UnofficialCrusaderPatch one.</li>
-                        <li>Setup your Run/Debug Configurations. In JetBrains, double tap Shift, then type in Edit Configurations. It will automatically create a Default .NET project run/debug configuration, you can press Apply & OK, the default should be fine. If it is not, then be sure the target framework is .NET v4.0.</li>
-                        <li>To compile, you will need Evrey's AIV files, so head to this link: https://github.com/Evrey/SHC_AIV Download Evrey's SHC_AIV project as a ZIP, extract firefly_fixed, history, skirmish into the UnofficialCrusaderPatch/SHC_AIV folder. Yes, you have to create the SHC_AIV folder first.</li>
+                        <li class="string">ucp-contributing-first-steps-body-step-1</li>
+                        <li class="string">ucp-contributing-first-steps-body-step-2</li>
+                        <li class="string">ucp-contributing-first-steps-body-step-3</li>
+                        <li class="string">ucp-contributing-first-steps-body-step-4</li>
                     </ul>
 
-                    If everything is done correctly, you can compile and run the software. Now this is where the fun begins.
+                    <span class="string">ucp-contributing-first-steps-body-complete</span>
                 </div>
             </div>
 
@@ -241,5 +232,6 @@
 <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="assets/js/strings.js"></script>
 
 </html>
