--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,6 @@
     <link rel="icon" type="image/ico" href="assets/img/icon6.ico" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
-
 <body>
     <div class="container-fluid page">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -20,55 +19,51 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
+                        <a class="nav-link string" href="index.html">ucp-home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="getting-started.html">Getting Started</a>
+                        <a class="nav-link string" href="getting-started.html">ucp-getting-started</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="features.html">Features</a>
+                        <a class="nav-link string" href="features.html">ucp-features</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        AI Character Introduction
-                      </a>
+                        <a class="nav-link dropdown-toggle string" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">ucp-ai-intro</a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="aic/overview.html">Overview</a>
+                            <a class="dropdown-item string" href="aic/overview.html">ucp-aic-overview</a>
                             <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="aic/detailed.html">AI Personality Values</a>
-                            <a class="dropdown-item" href="aic/field-values.html">AIC Field Values</a>
+                            <a class="dropdown-item string" href="aic/detailed.html">ucp-aic-personality</a>
+                            <a class="dropdown-item string" href="aic/field-values.html">ucp-aic-fields</a>
                         </div>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="aiv.html">AI Castle Introduction</a>
+                        <a class="nav-link string" href="aiv.html">ucp-aiv-intro</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contributing.html">Contributing</a>
+                        <a class="nav-link string" href="contributing.html">ucp-contributing</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">FAQ <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#"><span class="string">ucp-faq</span><span class="sr-only">(current)</span></a>
                     </li>
                 </ul>
             </div>
         </nav>
         <div class="header">
-            <h4 class="text-center">Unofficial Crusader Patch Latest Version: UCP 2.14 
+            <h4 class="text-center"><span class="string">ucp-latest-version</span>
                     <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch"><i class="fab fa-github"></i></a>
-                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.14">changelog</a> 
-                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.14/UnofficialCrusaderPatch_v2.14.zip">download</a>
+                    <a class="latest-release string" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.14">ucp-changelog</a> 
+                    <a class="latest-release string" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.14/UnofficialCrusaderPatch_v2.14.zip">ucp-download</a>
                 </h4>
         </div>
         <hr class="header-divider">
         <div id="faq-content">
-          <h4 class="text-center" id="faq-header">Frequently Asked Questions</h4>
+          <h4 class="text-center string" id="faq-header">ucp-faq-title</h4>
 
           <div id="faq-alt" class="">
             <div class="card faq-question">
-                <h5>Have any questions?</h5>
+                <h5 class="string">ucp-faq-any-questions</h5>
                 <hr class="faq-question-divider">
-                <div class="card-body faq-question-body">
-                    Visit the Unofficial Crusader Patch discord <a href="https://discord.gg/vmy7CBR"><img src="https://discordapp.com/api/guilds/426318193603117057/widget.png?style=shield"></a> and ask away!
-                </div>
+                <div class="card-body faq-question-body string">ucp-faq-visit-discord</div>
             </div>
           </div>
 
@@ -82,5 +77,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <script src="assets/js/faq.js"></script>
+<script src="assets/js/strings.js"></script>
 
 </html>
