added unknown 000, 040, 124, 130 and renamed AttUnit2

--- a/aic/aic-description.html
+++ b/aic/aic-description.html
@@ -446,9 +446,9 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Unknown000</td>
+                                    <td>WallDecoration</td>
                                     <td>Integer</td>
-                                    <td>No description currently available</td>
+                                    <td>Wall decorations like flags, set up in the AIV file, can be defined with this value. 10 to 13 are flags, 8 is poured oil, 9 are burning flames, 14 are braziers, 15 are decorative skills, 22 are disease clouds. More is described in issue #616</td>
                                 </tr>
                                 <tr>
                                     <td>Unknown001</td>
@@ -481,14 +481,14 @@
                                     <td>No description currently available</td>
                                 </tr>
                                 <tr>
-                                    <td>Unknown040</td>
+                                    <td>AIRequestDelay</td>
                                     <td>Integer</td>
                                     <td>No description currently available</td>
                                 </tr>
                                 <tr>
                                     <td>Unknown072</td>
                                     <td>Integer</td>
-                                    <td>No description currently available</td>
+                                    <td>The time until an AI can request goods again after its request was accepted.</td>
                                 </tr>
                                 <tr>
                                     <td>Unknown073</td>
@@ -496,9 +496,9 @@
                                     <td>No description currently available</td>
                                 </tr>
                                 <tr>
-                                    <td>Unknown124</td>
+                                    <td>RaidRetargetDelay</td>
                                     <td>Integer</td>
-                                    <td>No description currently available</td>
+                                    <td>Might bug out ranged units when too low, this is the time raid units take until they get new instructions</td>
                                 </tr>
                                 <tr>
                                     <td>Unknown129</td>
@@ -506,9 +506,9 @@
                                     <td>No description currently available</td>
                                 </tr>
                                 <tr>
-                                    <td>Unknown130</td>
+                                    <td>AttAssaultDelay</td>
                                     <td>Integer</td>
-                                    <td>No description currently available</td>
+                                    <td>A delay for the main army attack, while siege engines are active.</td>
                                 </tr>
                                 <tr>
                                     <td>Unknown132</td>
@@ -772,14 +772,14 @@
                                     <td>Maximum number of units recruited to dig enemy moats</td>
                                 </tr>
                                 <tr>
-                                    <td>AttUnit2</td>
+                                    <td>AttUnitVanguard</td>
                                     <td><a href="field-values.html#Unit" target="_blank">DiggingUnit</a></td>
                                     <td>Type of unit, that engages the enemy walls and traps before the main army moves in</td>
                                 </tr>
                                 <tr>
-                                    <td>AttUnit2 Max</td>
+                                    <td>AttUnitVanguardMax</td>
                                     <td>Integer</td>
-                                    <td>Maximum number of AttUnit2 units to recruit</td>
+                                    <td>Maximum number of AttUnitVanguard units to recruit</td>
                                 </tr>
                                 <tr>
                                     <td>AttMaxLaddermen</td>
