--- a/getting-started.html
+++ b/getting-started.html
@@ -52,11 +52,12 @@
             </div>
         </nav>
         <div class="header">
-          <h4 class="text-center">Unofficial Crusader Patch Latest Version: UCP 2.14 
-                  <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch"><i class="fab fa-github"></i></a>
-                  <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.14">changelog</a> 
-                  <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/download/v2.14/UnofficialCrusaderPatch_v2.14.zip">download</a>
-              </h4>
+          <h4 class="text-center">Latest Version: UCP 2.15b 
+                    <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch"><i class="fab fa-github"></i></a>
+                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.15">changelog</a> 
+                    <a class="latest-release" href="https://github.com/UnofficialCrusaderPatch/UnofficialCrusaderPatch/releases/download/v2.15/UnofficialCrusaderPatch_2.15b.zip">download</a>
+                    <a href="https://discord.gg/vmy7CBR"><img src="https://discordapp.com/api/guilds/426318193603117057/widget.png?style=shield"></a>
+                </h4>
       </div>
         <hr class="header-divider">
         <div id="content" class="row">
